ajustes atualização da ong para logo
